feat: spigot 1.16.5-R0.1-SNAPSHOT ready